# PDFnMD_BACKEND

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/api/routes/: __init__.py  content.py  convert.py  download.py  status.py
app/core/: config.py  exceptions.py
app/models/: __init__.py  request.py  response.py  types.py
app/services/: __init__.py  converter_factory.py  file_manager.py  r2_manager.py  s3_manager.py  task_manager.py
app/services/converters/: __init__.py  base.py  md_to_pdf.py  pdf_to_md.py
app/utils/: __init__.py  file_validator.py
tests/: test_uv_migration.py
